Stop header overlap on services modals.

--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -381,6 +381,7 @@ a {
 }
 
 .service-detail {
+  min-width: 420px;
   @include modal;
   .inner {
     padding-bottom: 0;
@@ -400,7 +401,7 @@ a {
     padding: 25px;
     color: white;
     > h1 {
-      margin: 0;
+      margin: 0 18px 0 0;
     }
   }
 
@@ -780,7 +781,6 @@ a {
     margin-top: -4%;
     z-index: 25;
     width: 100px;
-    height: 100px;
     border-style: solid;
     border-radius: 500px;
     border-color: white;
